--- a/templates/appointment_confirmation_email.html
+++ b/templates/appointment_confirmation_email.html
@@ -92,7 +92,7 @@
             <a href="#" class="button">View Appointment</a>
         </div>
 
-        <p>Thank you for choosing Noir. We look forward to seeing you!</p>
+        <p>Thank you for choosing {{saloon_name}}. We look forward to seeing you!</p>
         
         <p>Best regards,<br>
         The Salon Team</p>
