--- a/templates/staff_appointment_confirmation_email.html
+++ b/templates/staff_appointment_confirmation_email.html
@@ -8,7 +8,7 @@
 
     <p>Dear {{ fullname }},</p>
 
-    <p>Your appointment has been successfully booked! Here are the details:</p>
+    <p>You have been booked! Here are the details:</p>
 
     <ul>
         <li><strong>Appointment ID:</strong> {{ appointment_id }}</li>
